# Arplexity

./: README.md  pyproject.toml
backend/: main.py  pyproject.toml  requirements.txt
frontend/: package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/components/: Header.tsx  InputBar.tsx  MessageArea.tsx
